--- a/docker/services/frontend/html/config-hmm.html
+++ b/docker/services/frontend/html/config-hmm.html
@@ -645,55 +645,26 @@
 
         <!-- Overview Tab -->
         <div id="tab-overview" class="tab-content active">
-            <div class="grid-2-equal">
-                <!-- Service Info -->
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="card-title">&#129302; Service-Information</h3>
-                        <button class="btn btn-primary btn-sm" onclick="loadInfo()">&#8635; Aktualisieren</button>
+            <!-- Compact Service Info + Regime Types -->
+            <div class="card" style="padding: 0.75rem;">
+                <div style="display: flex; flex-wrap: wrap; gap: 1rem; align-items: center; justify-content: space-between;">
+                    <!-- Service Info (inline) -->
+                    <div style="display: flex; flex-wrap: wrap; gap: 1rem; align-items: center;" id="service-info-compact">
+                        <span style="font-weight: 600; color: #64c8ff;">&#129302; hmm-regime</span>
+                        <span style="color: #888;">v<span id="info-version">-</span></span>
+                        <span><span style="color: #888;">Modelle:</span> <strong id="info-models" style="color: #4caf50;">-</strong></span>
+                        <span><span style="color: #888;">Scorer:</span> <strong id="info-scorer" style="color: #4caf50;">-</strong></span>
+                        <span><span style="color: #888;">Features:</span> <strong id="info-features" style="color: #64c8ff;">18</strong></span>
+                        <span><span style="color: #888;">Uptime:</span> <span id="info-uptime" style="color: #888;">-</span></span>
                     </div>
-                    <div id="service-info">
-                        <div class="loading"><div class="spinner"></div></div>
+                    <!-- Regime Types (inline badges) -->
+                    <div style="display: flex; gap: 0.5rem; align-items: center;">
+                        <span style="background: linear-gradient(135deg, #1b5e20, #2e7d32); padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.75rem;" title="Aufwärtstrend">&#128200; Bull</span>
+                        <span style="background: linear-gradient(135deg, #b71c1c, #c62828); padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.75rem;" title="Abwärtstrend">&#128201; Bear</span>
+                        <span style="background: linear-gradient(135deg, #37474f, #455a64); padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.75rem;" title="Seitwärtsbewegung">&#8596; Sideways</span>
+                        <span style="background: linear-gradient(135deg, #e65100, #f57c00); padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.75rem;" title="Hohe Volatilität">&#9889; HighVol</span>
+                        <button class="btn btn-primary btn-sm" onclick="loadInfo()" style="padding: 0.2rem 0.4rem; font-size: 0.75rem; margin-left: 0.5rem;">&#8635;</button>
                     </div>
-                </div>
-
-                <!-- Regime Types -->
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="card-title">&#127919; Regime-Typen</h3>
-                    </div>
-                    <div class="grid-2-equal" id="regime-types">
-                        <div class="regime-card bull_trend">
-                            <div class="regime-icon">&#128200;</div>
-                            <div class="regime-name">Bull Trend</div>
-                            <div style="color: #888; font-size: 0.8rem;">Aufwärtstrend</div>
-                        </div>
-                        <div class="regime-card bear_trend">
-                            <div class="regime-icon">&#128201;</div>
-                            <div class="regime-name">Bear Trend</div>
-                            <div style="color: #888; font-size: 0.8rem;">Abwärtstrend</div>
-                        </div>
-                        <div class="regime-card sideways">
-                            <div class="regime-icon">&#8596;</div>
-                            <div class="regime-name">Sideways</div>
-                            <div style="color: #888; font-size: 0.8rem;">Seitwärtsbewegung</div>
-                        </div>
-                        <div class="regime-card high_volatility">
-                            <div class="regime-icon">&#9889;</div>
-                            <div class="regime-name">High Volatility</div>
-                            <div style="color: #888; font-size: 0.8rem;">Hohe Volatilität</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Models Overview -->
-            <div class="card">
-                <div class="card-header">
-                    <h3 class="card-title">&#128203; Geladene Modelle</h3>
-                </div>
-                <div id="models-list">
-                    <div class="loading"><div class="spinner"></div></div>
                 </div>
             </div>
 
@@ -713,6 +684,16 @@
                     <canvas id="metrics-chart"></canvas>
                 </div>
                 <div id="metrics-summary" style="padding: 0.5rem 1rem; font-size: 0.8rem; color: #888; border-top: 1px solid rgba(255,255,255,0.05);"></div>
+            </div>
+
+            <!-- Models Overview -->
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">&#128203; Geladene Modelle</h3>
+                </div>
+                <div id="models-list">
+                    <div class="loading"><div class="spinner"></div></div>
+                </div>
             </div>
         </div>
 
@@ -1277,22 +1258,18 @@
                 badge.textContent = 'Online';
                 badge.className = 'service-badge';
 
-                // Update stats
+                // Update stats bar
                 document.getElementById('stat-models').textContent = stats.hmm_models_count || 0;
                 document.getElementById('stat-features').textContent = info.components?.scorer?.feature_count || 18;
                 document.getElementById('stat-uptime').textContent = stats.uptime_seconds ? formatUptime(stats.uptime_seconds) : '-';
 
-                // Service Info
-                document.getElementById('service-info').innerHTML = `
-                    <table class="data-table">
-                        <tr><td style="color: #888;">Service</td><td>${info.service}</td></tr>
-                        <tr><td style="color: #888;">Version</td><td>${info.version}</td></tr>
-                        <tr><td style="color: #888;">Gestartet</td><td>${new Date(info.started_at).toLocaleString('de-CH')}</td></tr>
-                        <tr><td style="color: #888;">HMM Modelle</td><td>${info.components?.hmm?.loaded_models?.length || 0}</td></tr>
-                        <tr><td style="color: #888;">Scorer trainiert</td><td>${info.components?.scorer?.fitted ? '<span style="color: #4caf50;">Ja</span>' : '<span style="color: #f44336;">Nein</span>'}</td></tr>
-                        <tr><td style="color: #888;">Feature Count</td><td>${info.components?.scorer?.feature_count || 18}</td></tr>
-                    </table>
-                `;
+                // Update compact service info
+                document.getElementById('info-version').textContent = info.version || '-';
+                document.getElementById('info-models').textContent = info.components?.hmm?.loaded_models?.length || 0;
+                document.getElementById('info-scorer').textContent = info.components?.scorer?.fitted ? 'Ja' : 'Nein';
+                document.getElementById('info-scorer').style.color = info.components?.scorer?.fitted ? '#4caf50' : '#f44336';
+                document.getElementById('info-features').textContent = info.components?.scorer?.feature_count || 18;
+                document.getElementById('info-uptime').textContent = stats.uptime_seconds ? formatUptime(stats.uptime_seconds) : '-';
 
                 // Models List
                 const models = info.components?.hmm?.loaded_models || [];
