feat(ui): update layout for detection and scan results sections for improved clarity

--- a/docker/services/frontend/html/config-hmm.html
+++ b/docker/services/frontend/html/config-hmm.html
@@ -737,11 +737,11 @@
                     </div>
                 </div>
 
-                <!-- Results row -->
-                <div class="grid-2" style="gap: 1rem; margin-top: 0.75rem;">
-                    <div id="detection-result"></div>
-                    <div id="scan-results" style="max-height: 300px; overflow-y: auto;"></div>
-                </div>
+                <!-- Detection Result (single symbol) -->
+                <div id="detection-result" style="margin-top: 0.75rem;"></div>
+
+                <!-- Scan Results (multi-symbol) -->
+                <div id="scan-results" style="margin-top: 0.75rem; max-height: 400px; overflow-y: auto;"></div>
             </div>
 
             <!-- Regime History -->
