--- a/docker/services/frontend/html/config-tcn.html
+++ b/docker/services/frontend/html/config-tcn.html
@@ -1426,6 +1426,7 @@
             box-shadow: 0 4px 15px rgba(100, 200, 255, 0.15);
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
@@ -1776,6 +1777,27 @@
                         </div>
                         <div class="pattern-overview-signal">Signal: Short • Typ: Trend</div>
                     </div>
+                </div>
+            </div>
+
+            <!-- Learning Progress Chart -->
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">&#128200; Lernfortschritt</h3>
+                    <div style="display: flex; gap: 0.5rem; align-items: center;">
+                        <select class="form-control" id="tcn-metrics-training-type" style="padding: 0.25rem; font-size: 0.85rem; width: auto;" onchange="loadTcnMetricsHistory()">
+                            <option value="all">Alle Trainings</option>
+                            <option value="full">Vollständige Trainings</option>
+                            <option value="incremental">Inkrementelle Trainings</option>
+                        </select>
+                        <button class="btn btn-primary btn-sm" onclick="loadTcnMetricsHistory()" style="padding: 0.25rem 0.5rem;">&#8635;</button>
+                    </div>
+                </div>
+                <div style="position: relative; height: 200px; padding: 0.5rem;">
+                    <canvas id="tcn-metrics-chart"></canvas>
+                </div>
+                <div id="tcn-metrics-summary" style="padding: 0.5rem 1rem; font-size: 0.8rem; color: #888; border-top: 1px solid rgba(255,255,255,0.05);">
+                    Lade Metriken...
                 </div>
             </div>
 
@@ -2455,6 +2477,7 @@
         const API_BASE = '/tcn/api/v1';
         const TRAIN_API_BASE = '/tcn-train/api/v1';
         let trainingInterval = null;
+        let tcnMetricsChart = null;
 
         // =============================================================================
         // Pattern Detail Data (basierend auf docs/tcn_patterns/)
@@ -4380,6 +4403,7 @@
             loadAutoTrainingStatus();
             loadHistoryStats();
             loadPatternHistory();
+            loadTcnMetricsHistory();
 
             // Auto-refresh every 30 seconds
             setInterval(loadInfo, 30000);
@@ -6828,6 +6852,154 @@
                     ctx.fillText(timeStr, x, height - chartPadding.bottom + 32);
                 }
             });
+        }
+
+        // =============================================================================
+        // Learning Progress (Lernfortschritt) Functions
+        // =============================================================================
+
+        async function loadTcnMetricsHistory() {
+            const trainingType = document.getElementById('tcn-metrics-training-type')?.value || 'all';
+            const summaryEl = document.getElementById('tcn-metrics-summary');
+            const chartCanvas = document.getElementById('tcn-metrics-chart');
+
+            if (!chartCanvas) return;
+
+            try {
+                const response = await fetch(`${TRAIN_API_BASE}/models/metrics-history?limit=30`);
+                if (!response.ok) throw new Error('Failed to load metrics history');
+
+                const data = await response.json();
+                let history = data.history || [];
+
+                if (history.length === 0) {
+                    summaryEl.innerHTML = 'Keine Metriken-Historie verfügbar. Trainieren Sie Modelle, um den Lernfortschritt zu verfolgen.';
+                    if (tcnMetricsChart) {
+                        tcnMetricsChart.destroy();
+                        tcnMetricsChart = null;
+                    }
+                    return;
+                }
+
+                // Prepare chart data
+                const labels = history.map(h => h.date);
+                const accuracyData = history.map(h => h.avg_accuracy);
+                const f1Data = history.map(h => h.avg_f1);
+                const deployRateData = history.map(h => h.deploy_rate);
+
+                const ctx = chartCanvas.getContext('2d');
+
+                // Destroy existing chart
+                if (tcnMetricsChart) {
+                    tcnMetricsChart.destroy();
+                }
+
+                // Create new chart
+                tcnMetricsChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: labels,
+                        datasets: [
+                            {
+                                label: 'Accuracy %',
+                                data: accuracyData,
+                                borderColor: '#4caf50',
+                                backgroundColor: 'rgba(76, 175, 80, 0.1)',
+                                borderWidth: 2,
+                                fill: true,
+                                tension: 0.3,
+                                pointRadius: 3
+                            },
+                            {
+                                label: 'F1-Score %',
+                                data: f1Data,
+                                borderColor: '#64c8ff',
+                                backgroundColor: 'rgba(100, 200, 255, 0.1)',
+                                borderWidth: 2,
+                                fill: true,
+                                tension: 0.3,
+                                pointRadius: 3
+                            },
+                            {
+                                label: 'Deploy-Rate %',
+                                data: deployRateData,
+                                borderColor: '#ffb74d',
+                                backgroundColor: 'rgba(255, 183, 77, 0.1)',
+                                borderWidth: 2,
+                                fill: false,
+                                tension: 0.3,
+                                pointRadius: 3,
+                                borderDash: [5, 5]
+                            }
+                        ]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        interaction: {
+                            intersect: false,
+                            mode: 'index'
+                        },
+                        plugins: {
+                            legend: {
+                                position: 'top',
+                                labels: {
+                                    color: '#888',
+                                    font: { size: 11 },
+                                    boxWidth: 12,
+                                    padding: 8
+                                }
+                            },
+                            tooltip: {
+                                backgroundColor: 'rgba(26, 26, 46, 0.95)',
+                                titleColor: '#fff',
+                                bodyColor: '#ccc',
+                                borderColor: 'rgba(100, 200, 255, 0.3)',
+                                borderWidth: 1
+                            }
+                        },
+                        scales: {
+                            x: {
+                                grid: { color: 'rgba(255, 255, 255, 0.05)' },
+                                ticks: { color: '#666', font: { size: 10 } }
+                            },
+                            y: {
+                                min: 0,
+                                max: 100,
+                                grid: { color: 'rgba(255, 255, 255, 0.05)' },
+                                ticks: {
+                                    color: '#666',
+                                    font: { size: 10 },
+                                    callback: v => v + '%'
+                                }
+                            }
+                        }
+                    }
+                });
+
+                // Calculate trend
+                const latestAcc = accuracyData[accuracyData.length - 1] || 0;
+                const firstAcc = accuracyData[0] || 0;
+                const accTrend = latestAcc - firstAcc;
+                const totalDeployed = history.reduce((sum, h) => sum + (h.deployed || 0), 0);
+                const totalRejected = history.reduce((sum, h) => sum + (h.rejected || 0), 0);
+
+                const trendIcon = accTrend > 0 ? '&#128200;' : accTrend < 0 ? '&#128201;' : '&#8596;';
+                const trendColor = accTrend > 0 ? '#4caf50' : accTrend < 0 ? '#f44336' : '#888';
+
+                summaryEl.innerHTML = `
+                    <span style="margin-right: 1rem;">${trendIcon} Trend: <span style="color: ${trendColor};">${accTrend > 0 ? '+' : ''}${accTrend.toFixed(1)}%</span></span>
+                    <span style="margin-right: 1rem;">Letzte Accuracy: <strong>${latestAcc.toFixed(1)}%</strong></span>
+                    <span style="margin-right: 1rem;">Deployed: <span style="color: #4caf50;">${totalDeployed}</span></span>
+                    <span>Rejected: <span style="color: #f44336;">${totalRejected}</span></span>
+                `;
+
+            } catch (error) {
+                console.error('Failed to load TCN metrics history:', error);
+                if (summaryEl) {
+                    summaryEl.innerHTML = '<span style="color: #e57373;">Fehler beim Laden der Metriken-Historie</span>';
+                }
+            }
         }
 
         // =============================================================================
